--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -54,9 +54,9 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5 text-left text-uppercase"><strong>product</strong></div>
-        <div class="col-md-2 text-right text-uppercase"><strong>downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="left" data-toggle="popover" title="Popover title" data-trigger="hover" data-content="And here's some amazing content. It's very engaging. Right?"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
-        <div class="col-md-2 text-right text-uppercase"><strong>factor</strong><div class="inline" style="margin-left:.2em;" data-placement="left" data-toggle="popover" title="Popover title" data-trigger="hover" data-content="And here's some amazing content. It's very engaging. Right?"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
-        <div class="col-md-2 text-right text-uppercase"><strong>plings</strong><div class="inline" style="margin-left:.2em;" data-placement="left" data-toggle="popover" title="Popover title" data-trigger="hover" data-content="And here's some amazing content. It's very engaging. Right?"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-2 text-right text-uppercase"><strong>downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Popover title" data-trigger="hover" data-content="And here's some amazing content. It's very engaging. Right?"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-2 text-right text-uppercase"><strong>factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Popover title" data-trigger="hover" data-content="And here's some amazing content. It's very engaging. Right?"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-2 text-right text-uppercase"><strong>plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Popover title" data-trigger="hover" data-content="And here's some amazing content. It's very engaging. Right?"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
     </div>
 </div>
 <div class="tab-content">
@@ -95,7 +95,7 @@ foreach ($allDownloads as $month => $products) {
         }
             ?>
         <div class='row row-total'>
-            <div class='col-md-11 text-right'>sum total for month:</div><div class='col-md-1 text-right'><?=$sum_total_month?></div>
+            <div class='col-md-11 text-right'>potential payout for this month:</div><div class='col-md-1 text-right'><?=$sum_total_month?></div>
         </div>
     </div>
 <?php
