--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -91,18 +91,16 @@ if('all' == strtolower($catTitle) OR (false === isset($catTitle))) {
 
         <aside class="col-lg-2 col-md-4 col-sm-8 col-xs-12" id="explore-sidebar" style="padding-right: 0px; <?=$asidehide?>">
             
-            <div style="width: 100%; height: 100% ; background-color: #fff; padding-bottom: 10px">
-            <a href=""><img src="/images/system/download-app.png" class="img-download" style="width: 100%; height: 80px" /></a>
+            <div style="width: 100%; background-color: #fff; padding-bottom: 10px">
+                <a href=""><img src="/images/system/download-app.png" class="img-download" style="width: 100%; height: 80px" /></a>
             </div>
 
             <div  class="row" style="background-color: #f1f1f1; margin-left: 0px; margin-right:0px;padding-right:10px">            
           
             <span class="commentTitle" style="margin:auto;display:table;padding:5px"> News </span>
-            <div class="prod-widget-box right" style=" background-color: #fff" id="rss-feeds">
-                
+            <div class="prod-widget-box right" style=" background-color: #fff" id="rss-feeds">                
             </div>
-           
-
+        
             <?php
             if (count($comments) > 0) {
                 ?>
