users back end: payout tab updated

--- a/application/modules/default/views/scripts/user/payout.phtml
+++ b/application/modules/default/views/scripts/user/payout.phtml
@@ -41,7 +41,13 @@ $this->countDownloadsOverall = count($this->downloads);
                     <h1 class="page-title left"><?= $this->translate('My Payouts') ?></h1>
                 </div>
                 <div class="my-products-list" id="my-payout-list">
-                    <?php echo $this->render('user/partials/loopPayout.phtml'); ?>
+                    <?php
+                    if ($this->countDownloadsOverall > 0) {
+                        echo $this->render('user/partials/loopPayout.phtml');
+                    } else {
+                        echo '<div class="well well-sm" role="alert">You have no downloads.</div>';
+                    }
+                     ?>
                 </div>
             </section>
             <!-- /PAGE BODY -->
