--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -63,6 +63,8 @@
 <?php
 $helpImage = new Default_View_Helper_Image();
 $css_active = ' in active';
+$has_paypal = false;
+$currency = new Zend_Currency('en_US');
 foreach ($allDownloads as $month => $products) {
     $sum_total_month = 0;
     $sum_total_text = '';
@@ -75,10 +77,10 @@ foreach ($allDownloads as $month => $products) {
 
                 <div class="col-md-1 cell-default">
                     <img src="<?php echo $helpImage->Image($product['image_small'],
-                        array('width' => 80, 'height' => 80)); ?>"/>
+                        array('width' => 80, 'height' => 65)); ?>"/>
                 </div>
                 <div class="col-md-5 text-left cell-default">
-                    <span><?= $product['title']; ?></span>
+                    <span><?= $product['title']; ?> (<?=$product['cat_title']?>)</span>
                 </div>
                 <div class="col-md-2 text-right cell-default">
                     <span><?= $product['num_downloads'] ?></span>
@@ -94,18 +96,24 @@ foreach ($allDownloads as $month => $products) {
             <?php
             $sum_total_month += $product['num_downloads'] * $product['dl_pling_factor'];
             $sum_total_text = 'potential payout for this month:';
+            $sum_total_payout = $currency->toCurrency($sum_total_month/100);
             if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_COMPLETED) {
-                $sum_total_month = $product['amount'];
+                $sum_total_payout = $currency->toCurrency($product['amount']);
                 $sum_total_text = 'executed pay out this month:';
             }
+            $has_paypal = $product['paypal_mail'] ? true : false;
         }
-            ?>
+        ?>
         <div class='row row-total'>
-            <div class='col-md-11 text-right'><?=$sum_total_text?></div><div class='col-md-1 text-right'><?=$sum_total_month?></div>
+            <div class='col-md-11 text-right'>total plings:</div><div class='col-md-1 text-right'><?=$sum_total_month?></div>
+            <div class='col-md-11 text-right'><?=$sum_total_text?></div><div class='col-md-1 text-right'><strong><?=$sum_total_payout?></strong></div>
         </div>
     </div>
 <?php
     }
+     if (false == $has_paypal) {
+        echo '<div class="alert alert-warning" role="alert">You have no PayPal account configured. Please configure a PayPal account <a href="/settings#payments-collapse">here</a>.</div>';
+     }
 ?>
 </div><?php $this->inlineScript()->appendScript(
     '    $(document).ready(function(){
