--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -91,8 +91,8 @@ if('all' == strtolower($catTitle) OR (false === isset($catTitle))) {
 
         <aside class="col-lg-2 col-md-4 col-sm-8 col-xs-12" id="explore-sidebar" style="padding-right: 0px; <?=$asidehide?>">
             
-            <div style="width: 100%; background-color: #fff; padding-bottom: 10px">
-                <a href=""><img src="/images/system/download-app.png" class="img-download" style="width: 100%; height: 80px" /></a>
+            <div style="width: 100%; background-color: #fff; padding-bottom: 10px; text-align: center;">
+                <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" class="img-download" style="width: 92%; " /></a>
             </div>
 
             <div  class="row" style="background-color: #f1f1f1; margin-left: 0px; margin-right:0px;padding-right:10px">            
