--- a/application/modules/default/views/scripts/user/partials/userHeader.phtml
+++ b/application/modules/default/views/scripts/user/partials/userHeader.phtml
@@ -67,7 +67,7 @@ $helperMember = new Default_View_Helper_BuildMemberUrl();
     <li class="header-menu-left-item <?php echo $this->tab == 'payout' ? 'active' : ''; ?>">
         <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'payout'); ?>">
             <span class="glyphicon glyphicon-usd"></span>
-            <?= $this->translate('My Payouts') ?>
+            <?= $this->translate('My plings') ?>
         </a>
     </li>
 
