--- a/application/modules/default/views/scripts/user/payout.phtml
+++ b/application/modules/default/views/scripts/user/payout.phtml
@@ -38,7 +38,7 @@ $this->countDownloadsOverall = count($this->downloads);
                 <?php echo $this->render('user/partials/userHeader.phtml'); ?>
                 <!-- /NAVIGATION -->
                 <div class="my-products-heading">
-                    <h1 class="page-title left"><?= $this->translate('My Payouts') ?></h1>
+                    <h1 class="page-title left"><?= $this->translate('My plings') ?></h1>
                 </div>
                 <div class="my-products-list" id="my-payout-list">
                     <?php
